[gd_scene load_steps=2 format=3 uid="uid://dr38a7w4ytvjg"]

[ext_resource type="Script" uid="uid://4umh7ssnrwd7" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_l6cm7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.5
offset_top = -33.0
offset_right = 31.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ngee"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ctdddd"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
